--- a/assets/css/animated.css
+++ b/assets/css/animated.css
@@ -1,35 +1,39 @@
+:root {
+  --img-moodeng: url("~/assets/img/moodeng.png");
+}
+
 .base {
   width: 128px;
   height: 128px;
 }
 
 .break,
-#crouch:hover {
-  background: url("/moodeng.png") 0 0;
+.crouch:hover {
+  background: var(--img-moodeng) 0 0;
 }
 
 .charge {
-  background: url("/moodeng.png") 384px 0;
+  background: var(--img-moodeng) 384px 0;
 }
 
 .float {
-  background: url("/moodeng.png") 256px 0;
+  background: var(--img-moodeng) 256px 0;
 }
 
 .stand {
-  background: url("/moodeng.png") 128px 0;
+  background: var(--img-moodeng) 128px 0;
 }
 
-#run {
+.run {
   animation: aniRun 0.6s steps(4) infinite;
 }
 
-#dash {
+.dash {
   left: 100px;
   position: relative;
 }
 
-#dash:hover {
+.dash:hover {
   animation-name: aniDash, aniMove, aniDash;
   animation-duration: 0.3s, 0.6s, 0.2s;
   animation-delay: 0s, 0.3s, 0.9s;
@@ -38,15 +42,15 @@
   animation-fill-mode: forwards;
 }
 
-#flinch:hover {
+.flinch:hover {
   animation: aniFlinch 0.2s steps(2) 3;
 }
 
-#turn:hover {
+.turn:hover {
   transform: scaleX(-1);
 }
 
-#jump:hover {
+.jump:hover {
   animation-name: aniJump, aniJump;
   animation-duration: 0.3s, 0.5s;
   animation-delay: 0s, 0.3s;
