--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,3 +20,13 @@ li {
 .mb-0 {
   margin-bottom: 0;
 }
+
+.collision {
+    position: absolute;
+    left: 21px;
+    top: 32px;
+    width: 80px;
+    height: 60px;
+    background: #0f0;
+    opacity: 0.5;
+  }
