--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&family=Tiny5&display=swap');
+
+html {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.thick {
+  font-family: "DM Sans";
+  font-weight: 900;
+}
+
 .tiny {
-    font-family: "Tiny5", serif;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Tiny5", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .row {
@@ -20,7 +33,7 @@
   margin: 10px auto;
 }
 
-li {
+.sp li {
   list-style: none;
 }
 
@@ -29,11 +42,16 @@ li {
 }
 
 .collision {
-    position: absolute;
-    left: 21px;
-    top: 32px;
-    width: 80px;
-    height: 60px;
-    background: #0f0;
-    opacity: 0.5;
-  }
+  position: absolute;
+  left: 21px;
+  top: 32px;
+  width: 80px;
+  height: 60px;
+  background: #0f0;
+  opacity: 0.5;
+}
+
+.content {
+  max-width: 1200px;
+  margin: 60px auto;
+}
