--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&family=Tiny5&display=swap');
 
+:root {
+  --img-moodeng: url("~/public/moodeng.png");
+}
+
 html {
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
