--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&family=Tiny5&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&family=Tiny5&display=swap");
 
 :root {
   --img-moodeng: url("~/public/moodeng.png");
+  --moo-deng-blush: #e4a9a8;
+  --moo-deng-skin: #88797e;
+  --moo-deng-drenched: #252833;
+  --lily-of-the-valley: #eae9f9;
 }
 
 html {
@@ -60,7 +64,63 @@ html {
   margin: 60px auto;
 }
 
+a {
+  text-decoration:overline;
+  color: var(--moo-deng-skin);
+}
+a:hover {
+  text-decoration:none;
+  color: var(--moo-deng-blush);
+}
+
 .dark-mode {
-background-color: rgb(34, 34, 34);
-color: rgb(242, 234, 238);
+  background-color: var(--moo-deng-drenched);
+  color: var(--lily-of-the-valley);
+}
+
+.dark-mode a {
+  color: var(--moo-deng-blush);
+}
+
+.dark-mode a:hover {
+  color: var(--moo-deng-skin);
+}
+
+.speech-bubble {
+	position: relative;
+	background: #00000000;
+	border-radius: .4em;
+  padding: 8px;
+  width: fit-content;
+  float: inline-start;
+  margin-right: 20px;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 16px solid transparent;
+	border-left-color:  #00000000;
+	border-right: 0;
+	border-bottom: 0;
+	margin-top: -8px;
+	margin-right: -16px;
+}
+
+.speech-bubble:hover {
+	background: #fff;
+}
+
+.speech-bubble:hover::after {
+	border-left-color: #fff;
+}
+
+.header {
+  position: sticky;
+  top: 0px;
+  z-index: 10;
 }
